# windows-mcp-proxy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: config.example.json  mcp.example.json
src/windows_mcp_proxy/: __init__.py  proxy.py
