[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-mcp-proxy"
version = "0.1.0"
description = "Local stdio MCP proxy that fans out to multiple Windows-MCP HTTP servers, with lazy init from a per-project inventory."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "techjoec" }]
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.3,<4",
  "httpx>=0.27",
]

[project.scripts]
windows-mcp-proxy = "windows_mcp_proxy.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/windows_mcp_proxy"]
